--- a/GAT.ipynb
+++ b/GAT.ipynb
@@ -312,36 +312,36 @@
     "\n",
     "### 3.1.1 Initialisation\n",
     "\n",
-    "**Step 1** : Initiliase constants that will be used in the model</br>\n",
-    "**Step 2** : Create the trainable weights linear projection matrix (denoted as \"W\" in the paper), attention target/source(denoted as \"a\" in the paper) and bias (not mentioned in the paper but present in the official GAT repo).</br>\n",
-    "**Step 3** : After we concatenate target node (node i) and source node (node j) we apply the \"additive\" scoring function which gives us un-normalized score \"e\". Here we split the \"a\" vector - but the semantics remain the same. Basically instead of doing [x, y] (concatenation, x/y are node feature vectors) and dot product with \"a\" we instead do a dot product between x and \"a_left\" and y and \"a_right\" and we sum them up.</br>\n",
-    "**Step 4** : Initialise the Bias if nessecary</br>\n",
-    "**Step 5** : Initialise the Add Slip connection if necessary</br>\n",
-    "**Step 6** : Initialise the Leaky ReLu, using 0.2 as in the paper</br>\n",
+    "* **Step 1** : Initiliase constants that will be used in the model\n",
+    "* **Step 2** : Create the trainable weights linear projection matrix (denoted as \"W\" in the paper), attention target/source(denoted as \"a\" in the paper) and bias (not mentioned in the paper but present in the official GAT repo).\n",
+    "* **Step 3** : After we concatenate target node (node i) and source node (node j) we apply the \"additive\" scoring function which gives us un-normalized score \"e\". Here we split the \"a\" vector - but the semantics remain the same. Basically instead of doing [x, y] (concatenation, x/y are node feature vectors) and dot product with \"a\" we instead do a dot product between x and \"a_left\" and y and \"a_right\" and we sum them up.\n",
+    "* **Step 4** : Initialise the Bias if nessecary\n",
+    "* **Step 5** : Initialise the Add Slip connection if necessary\n",
+    "* **Step 6** : Initialise the Leaky ReLu, using 0.2 as in the paper\n",
     "\n",
     "### 3.1.2 Forward Implementation\n",
-    "**Step 1** : Linear Projection + regularization</br>\n",
-    "    &emsp;**Step 1.1** We apply the dropout to all of the input node features.</br>\n",
-    "    &emsp;**Step 1.2** We project the input node features into NH independent output features (one for each attention head).</br></br>\n",
+    "* **Step 1** : Linear Projection + regularization\n",
+    "    * **Step 1.1** We apply the dropout to all of the input node features.\n",
+    "    * **Step 1.2** We project the input node features into NH independent output features (one for each attention head).\n",
     "    \n",
-    "**Step 2** : Edge attention calculation</br>\n",
-    "    &emsp;**Step 2.1** Apply the scoring function (* represents element-wise (a.k.a. Hadamard) product)</br>\n",
-    "    &emsp;**Step 2.2** We simply copy (lift) the scores for source/target nodes based on the edge index. Instead of preparing all the possible combinations of scores we &emsp;just prepare those that will actually be used and those are defined by the edge index.</br>\n",
-    "    &emsp;**Step 2.3** Add stochasticity to neighborhood aggregation</br></br>\n",
+    "* **Step 2** : Edge attention calculation\n",
+    "    * **Step 2.1** Apply the scoring function (* represents element-wise (a.k.a. Hadamard) product)\n",
+    "    * **Step 2.2** We simply copy (lift) the scores for source/target nodes based on the edge index. Instead of preparing all the possible combinations of scores we &emsp;just prepare those that will actually be used and those are defined by the edge index.\n",
+    "    * **Step 2.3** Add stochasticity to neighborhood aggregation\n",
     "\n",
-    "**Step 3** : Neighborhood aggregation</br>\n",
-    "    &emsp;**Step 3.1** Element-wise (aka Hadamard) product</br>\n",
-    "    &emsp;**Step 3.2** Sum up weighted and projected neighborhood feature vectors for every target node</br></br>\n",
+    "* **Step 3** : Neighborhood aggregation\n",
+    "    * **Step 3.1** Element-wise (aka Hadamard) product\n",
+    "    * **Step 3.2** Sum up weighted and projected neighborhood feature vectors for every target node\n",
     "\n",
-    "**Step 4** : Residual/skip connections, concat and bias</br>\n",
+    "* **Step 4** : Residual/skip connections, concat and bias\n",
     "\n",
     "### 3.1.2 Neighbourhood Aware Softmax\n",
     " As the fn name suggest it does softmax over the neighborhoods. Example: say we have 5 nodes in a graph. Two of them 1, 2 are connected to node 3. If we want to calculate the representation for node 3 we should take into account feature vectors of 1, 2 and 3 itself. Since we have scores for edges 1-3, 2-3 and 3-3 in scores_per_edge variable, this function will calculate attention scores like this: 1-3/(1-3+2-3+3-3) (where 1-3 is overloaded notation it represents the edge 1-3 and its (exp) score) and similarly for 2-3 and 3-3 i.e. for this neighborhood we don't care about other edge scores that include nodes 4 and 5.\n",
     " \n",
-    "**Step 1** : Calculate the numerator. Make logits <= 0 so that e^logit <= 1 (this will improve the numerical stability)</br>\n",
-    "**Step 2** : Calculate the denominator. shape = (E, NH)</br>\n",
-    "**Step 3** : 1e-16 is theoretically not needed but is only there for numerical stability (avoid div by 0) - due to the possibility of the computer rounding a very small number all the way to 0.</br>\n",
-    "**Step 4** : reshape = (E, NH) -> (E, NH, 1) so that we can do element-wise multiplication with projected node features</br>\n"
+    "* **Step 1** : Calculate the numerator. Make logits <= 0 so that e^logit <= 1 (this will improve the numerical stability)\n",
+    "* **Step 2** : Calculate the denominator. shape = (E, NH)<\n",
+    "* **Step 3** : 1e-16 is theoretically not needed but is only there for numerical stability (avoid div by 0) - due to the possibility of the computer rounding a very small number all the way to 0.\n",
+    "* **Step 4** : reshape = (E, NH) -> (E, NH, 1) so that we can do element-wise multiplication with projected node features\n"
    ]
   },
   {
@@ -625,8 +625,8 @@
     "We will finally start training the GAT\n",
     "\n",
     "### 4.1 Initialisation\n",
-    "**Step 1** : We will define three different model phases to depict training, validation and testing.</br>\n",
-    "**Step 2** : We will define Global vars used for early stopping. After some number of epochs (as defined by the patience_period var) without any improvement on the validation dataset (measured via accuracy metric), we'll break out from the training loop.\n"
+    "* **Step 1** : We will define three different model phases to depict training, validation and testing.\n",
+    "* **Step 2** : We will define Global vars used for early stopping. After some number of epochs (as defined by the patience_period var) without any improvement on the validation dataset (measured via accuracy metric), we'll break out from the training loop.\n"
    ]
   },
   {
@@ -767,11 +767,11 @@
     "\n",
     "We will now define a simple decorator function so that we don't have to pass arguments that don't change from epoch to epoch\n",
     "\n",
-    "**Step 1** : Certain modules behave differently depending on whether we're training the model or not. e.g. nn.Dropout - we only want to drop model weights during the training.</br>\n",
-    "**Step 2** : Do a forwards pass and extract only the relevant node scores (train/val or test ones). Note: [0] just extracts the node_features part of the data (index 1 contains the edge_index)</br>\n",
-    "**Step 3** : Calculater the cross entropy. Example: let's take an output for a single node on Cora - it's a vector of size 7 and it contains unnormalized scores like: V = [-1.393,  3.0765, -2.4445,  9.6219,  2.1658, -5.5243, -4.6247] What PyTorch's cross entropy loss does is for every such vector it first applies a softmax, and so we'll have the V transformed into: [1.6421e-05, 1.4338e-03, 5.7378e-06, 0.99797, 5.7673e-04, 2.6376e-07, 6.4848e-07] Secondly, whatever the correct class is (say it's 3), it will then take the element at position 3, 0.99797 in this case, and the loss will be -log(0.99797). It does this for every node and applies a mean. You can see that as the probability of the correct class for most nodes approaches 1 we get to 0 loss! </br>\n",
-    "**Step 4** : If the model is training, do the dradient descent. </br>\n",
-    "**Step 5** : Accuracy metric. Finds the index of maximum (unnormalized) score for every node and that's the class prediction for that node. Compare those to true (ground truth) labels and find the fraction of correct predictions</br>"
+    "* **Step 1** : Certain modules behave differently depending on whether we're training the model or not. e.g. nn.Dropout - we only want to drop model weights during the training.\n",
+    "* **Step 2** : Do a forwards pass and extract only the relevant node scores (train/val or test ones). Note: [0] just extracts the node_features part of the data (index 1 contains the edge_index)\n",
+    "* **Step 3** : Calculater the cross entropy. Example: let's take an output for a single node on Cora - it's a vector of size 7 and it contains unnormalized scores like: V = [-1.393,  3.0765, -2.4445,  9.6219,  2.1658, -5.5243, -4.6247] What PyTorch's cross entropy loss does is for every such vector it first applies a softmax, and so we'll have the V transformed into: [1.6421e-05, 1.4338e-03, 5.7378e-06, 0.99797, 5.7673e-04, 2.6376e-07, 6.4848e-07] Secondly, whatever the correct class is (say it's 3), it will then take the element at position 3, 0.99797 in this case, and the loss will be -log(0.99797). It does this for every node and applies a mean. You can see that as the probability of the correct class for most nodes approaches 1 we get to 0 loss!\n",
+    "* **Step 4** : If the model is training, do the dradient descent.\n",
+    "* **Step 5** : Accuracy metric. Finds the index of maximum (unnormalized) score for every node and that's the class prediction for that node. Compare those to true (ground truth) labels and find the fraction of correct predictions"
    ]
   },
   {
@@ -872,11 +872,11 @@
    "metadata": {},
    "source": [
     "### 4.5 Final Training the GAT\n",
-    "**Step 1** : Load the graph data</br>\n",
-    "**Step 2** : Prepare the model</br>\n",
-    "**Step 3** : Prepare other training related utilities (loss & optimizer and decorator function)</br>\n",
-    "**Step 4** : Start the training procedure</br>\n",
-    "**Step 5** : Potentially test the model</br>"
+    "* **Step 1** : Load the graph data\n",
+    "* **Step 2** : Prepare the model\n",
+    "* **Step 3** : Prepare other training related utilities (loss & optimizer and decorator function)\n",
+    "* **Step 4** : Start the training procedure\n",
+    "* **Step 5** : Potentially test the model"
    ]
   },
   {
